<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">Divya Yadav\'s Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone </string>
    <string name="toast_msg">This button will launch my %s app</string>
</resources>
